# slint_bug

./: Readme.md
.history/: Readme_20230719154938.md  Readme_20230719155313.md  Readme_20230719155909.md
bugA/: .gitignore  Cargo.toml  MainAdapter.slint  build.rs  example.db  temp-display.slint
bugA/src/: SQLHandle.rs  SerialHandle.rs  TimeConvert.rs  main.rs
bugA/ui/: CT_history_page.slint  CT_main_page.slint  CT_table_page.slint  connect_page.slint  controls_page.slint  icon.slint  page.slint  page_settings.slint  pages.slint  plotter.slint  save_page.slint  sidebar.slint  sidebar_hide.slint  sidebar_old.slint  tabbar.slint  table_view_page.slint  theme.slint
bugA/ui/custom_widgets/: custom_button.slint  custom_comboBox.slint  custom_label.slint  custom_list.slint  custom_popup.slint  custom_roundButton.slint  custom_scrollView.slint  custom_slider.slint  custom_spacer.slint  custom_switchButton.slint  custom_tableView.slint  custom_tableViewPaging.slint  custom_tableView_old.slint  custom_textLine.slint  custom_toolButton.slint  focus_border.slint  focus_touch_area.slint
