[package]
name = "vital-signs-monitor"
version = "0.1.0"
authors = ["Chen Yuheng <1016867898@qq.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["unstable-locales"] }
serialport = "4.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.28.1", features = ["full"] }
lazy_static = "1.4.0"
plotters = "0.3.1"
[build-dependencies]
slint-build = "1.0"



# Remove the `#wasm#` to uncomment the wasm build.
# This is commented out by default because we don't want to build it as a library by default
# The CI has a script that does sed "s/#wasm# //" to generate the wasm build.

#wasm# [lib]
#wasm# path = "main.rs"
#wasm# crate-type = ["cdylib"]

#wasm# [target.'cfg(target_arch = "wasm32")'.dependencies]
#wasm# wasm-bindgen = { version = "0.2" }
#wasm# web-sys = { version = "0.3", features=["console"] }
#wasm# console_error_panic_hook = "0.1.5"
#wasm# plotters-backend = { version = "0.3.1" }